fixed spacing issues with error on dsektop view

--- a/public/styles/error-msg.css
+++ b/public/styles/error-msg.css
@@ -12,6 +12,7 @@
     width: 60%;
     float: right;
     margin-top: 0;
+    margin-bottom: 1.5em
   }
 
 }
