--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -35,7 +35,7 @@ input[type="submit"] {
   .new-tweet {
     width: 60%;
     float: right;
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
   }
 
 }
