--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -65,7 +65,7 @@ article:hover {
     width: 60%;
     float: right;
     margin-top: 0;
-    margin-bottom: 2  rem;
+    margin-bottom: 1.5rem;
   }
 
 }
